Trying changes where I make scroll snap align to the start rather than top.  Hoping that fixes issue

--- a/long-story/styles.css
+++ b/long-story/styles.css
@@ -1,7 +1,7 @@
-body .scroll_snap_container
+body
 {
-    overflow: auto;
-    scroll-snap-type: y proximity;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
 }
 
 body .storybeat
@@ -9,6 +9,12 @@ body .storybeat
     margin: 0% 10% 0% 10%;
     height: 100vh;
     display: block;
-    scroll-snap-align: top;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+
+    /*debugging*/
+    outline: black;
+    border-color: black;
+    border-style: solid;
 }
 
